--- a/academy/src/main/resources/application.properties
+++ b/academy/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=academy
 
+jwt.secret=${JWT_SECRET_KEY}
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=${POSTGRES_PASSWORD}
