--- a/academy/src/main/resources/application.properties
+++ b/academy/src/main/resources/application.properties
@@ -23,6 +23,4 @@ spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.yandex.ru
-spring.mail.properties.mail.smtp.socketFactory.port=465
-spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback=false
+mail.debug=true
