Add Apache Kafka for sending notifications

--- a/academy/src/main/resources/application.properties
+++ b/academy/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.yandex.ru
 mail.debug=true
+
+spring.kafka.bootstrap-servers=localhost:9092
+kafka.topics.notifications=post-notifications
