--- a/academy/src/main/resources/application.properties
+++ b/academy/src/main/resources/application.properties
@@ -27,3 +27,4 @@ mail.debug=true
 
 spring.kafka.bootstrap-servers=localhost:9092
 kafka.topics.notifications=post-notifications
+spring.kafka.consumer.group-id=email-group
