--- a/academy/src/main/resources/application.properties
+++ b/academy/src/main/resources/application.properties
@@ -1,19 +1,24 @@
 spring.application.name=academy
+server.port=8080
 
 jwt.secret=${JWT_SECRET_KEY}
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://db:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=${POSTGRES_PASSWORD}
 
+
 spring.jpa.hibernate.ddl-auto=create-drop
+
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
 
 spring.mail.host=smtp.yandex.ru
 spring.mail.port=465
@@ -25,6 +30,15 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.yandex.ru
 mail.debug=true
 
-spring.kafka.bootstrap-servers=localhost:9092
+
+spring.kafka.bootstrap-servers=kafka:9092
 kafka.topics.notifications=post-notifications
 spring.kafka.consumer.group-id=email-group
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+logging.level.org.springframework.boot.actuate=INFO
+logging.level.io.micrometer=INFO
