--- a/academy/src/main/resources/application-dev.properties
+++ b/academy/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/dev_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
